objects/GenAIFeedback__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_feedbackId__c</fullName>
        <label>Key Qualifier Feedback Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_generationId__c</fullName>
        <label>Key Qualifier Generation Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_generationUpdateId__c</fullName>
        <label>Key Qualifier Generation Update Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>action__c</fullName>
        <label>Action</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appType__c</fullName>
        <label>App Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedbackId__c</fullName>
        <label>Feedback Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feedback__c</fullName>
        <label>Feedback</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationGroupId__c</fullName>
        <label>Generation Group Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationId__c</fullName>
        <label>Generation Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>generationUpdateId__c</fullName>
        <label>Generation Update Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>orgId__c</fullName>
        <label>Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303706658_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIFeedback_generationId_map_GenAI_rel</label>
        <referenceTo>GenAIGeneration__dlm</referenceTo>
        <relationshipLabel>GenAIFeedback_generationId_map_GenAI_rel</relationshipLabel>
        <relationshipName>rel_1753303706658_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>source__c</fullName>
        <label>Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>userId__c</fullName>
        <label>User Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>